DPO-2775 KCA - Sonic riippuvuuksien ja vanhan koodin poisto (#159)
* DPO-2775 KCA - Sonic riippuvuuksien ja vanhan koodin poisto
DPO-2776 KCA - Backup yhteys

* Logging fixes